--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hello world</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>i can code noiw </h1>
     <h2>yes i can</h2>
     <h3>new code</h3>
-
+    <p>more paragrapgh</p>
+    <h4>i am coing efef ref</h4>
 </body>
 
 </html>
