--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h3>new code</h3>
     <p>more paragrapgh</p>
     <h4>i am coing efef ref</h4>
+    <img src="images/fff.jpg" alt="hg">
 </body>
 
 </html>
